# rust_dev_smart_home

./: .env  Cargo.toml  README.md
.github/workflows/: build_checks_tests.yaml  rust.yml
smart_home_derive/: Cargo.toml
src/: common_traits.rs  devices.rs  lib.rs  main.rs
src/common/: traits.rs  types.rs
src/devices/: socket.rs  stubs.rs  thermometer.rs
src/devices/stubs/: socket_stub.rs  thermometer_stub.rs
src/examples/smart_home_server/: Cargo.toml
src/examples/smart_home_server/src/: main.rs
src/examples/smart_home_server/src/examples/: main.rs
src/examples/smart_home_server/src/server_tcp/: main.rs
src/examples/smart_home_server/src/server_tcp/devices/: mod.rs  socket_tcp.rs
src/examples/smart_home_server/src/server_tcp_async/: main.rs
src/examples/smart_socet/: Cargo.toml
src/examples/smart_socet/src/: main.rs
src/examples/smart_socet/src/async/: main.rs
src/examples/smart_socet/src/thread/: main.rs
src/examples/smart_thermometer/: Cargo.toml
src/examples/smart_thermometer/src/: main.rs
src/examples/smart_thermometer/src/async/: main.rs
src/examples/smart_thermometer/src/thread/: main.rs
src/examples/socket_gui/: Cargo.toml  build.rs
src/examples/socket_gui/src/: main.rs  socket_lib_wrapper.rs
src/examples/web_server/: Cargo.toml
src/examples/web_server/requests/: create_device.sh  create_room.sh  delete_device.sh  delete_room.sh  get_room.sh  list_rooms.sh
src/examples/web_server/src/: count.rs  error.rs  main.rs  mongo.rs
src/house/: house.rs  mod.rs  room.rs
