[package]
name = "smart_home_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server_example"
path = "src/examples/main.rs"

[[bin]]
name = "server_tcp"
path = "src/server_tcp/main.rs"

[[bin]]
name = "server_tcp_async"
path = "src/server_tcp_async/main.rs"

[dependencies]
smart_home_lib = { path = "../../../library/smart_home_lib" }
protocol = { path = "../../../library/protocol" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
