[package]
name = "smart_socket_tcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "socket_tcp"
path = "src/thread/main.rs"

[[bin]]
name = "socket_tcp_async"
path = "src/async/main.rs"

[dependencies]
smart_home_lib = { path = "../../../library/smart_home_lib" }
protocol = { path = "../../../library/protocol" }
tokio = "1.38.0"