[package]
name = "socket_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "socket_gui"
path = "src/main.rs"

[dependencies]
iced = "0.12.0"
smart_home_lib = { path = "../../../library/smart_home_lib" }
protocol = { path = "../../../library/protocol" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
