[package]
name = "socket_gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "socket_gui"
path = "src/main.rs"


[dependencies]
iced = "0.12.0"
smart_home_lib = { path = "../../../library/smart_home_lib" }
protocol = { path = "../../../library/protocol" }
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
time = "0.3.36"
libloading = "0.8.5"
libc = "0.2.155"
