[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web_server"
path = "src/main.rs"


[dependencies]
smart_home_lib = { path = "../../../library/smart_home_lib" }
protocol = { path = "../../../library/protocol" }
actix-web = "4.4.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
mongodb = "2.7.0"
dotenv = "0.15.0"